<resources>
    <string name="app_name">ShoppingList</string>
    <string name="defaultname">Your name</string>
    <string name="Profile">Profile</string>
    
    <!-- Slet dialog tekster-->
    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Tekster til main aktivitet layout -->
    <!-- hints -->
    <string name="hintProduktName">Productname</string>
    <string name="hintQuantity">amount</string>

    <!-- tekst til knapper -->
    <string name="buyBTN">Checked</string>
    <string name="RemoveTxt">Remove</string>
    <string name="AddItemTxt">Add item</string>
    <string name="ClearBTN">All</string>

    <!-- andet tekst-->
    <string name="ItemTxt">My items</string>
    <string name="welcomeTxt">Welcome to my shopping list</string>
    <string name="or">or</string>
    <string name="enterName">Name</string>

    <!-- menupunkt tekster -->
    <string name="action_settings">Settings</string>
    <string name="aboutmenupkt">About</string>
    <string name="camera">Take Photo</string>
    <string name="shareshoppinglist">Share shopping</string>

    <!-- About tekster -->
    <string name="aboutheading">About</string>
    <string name="abouttext">
        Use this app as a digital shoppinglist.\nThe purpose of the app is helping you organize your shopping, so you save money.\nThis app is a schoolproject I decided to share.\n\nHope you enjoy and happy shopping!\n//Cecilia
    </string>


    <!-- Arrays - til ddl med antal produktet man vil købe -->
    <string-array name="amoutItems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>



    <string name="hint_password">Enter password</string>
    <string name="hint_email">Enter email</string>

    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="GotoShopList">To list</string>
    <string name="sign_out">Sign out</string>
    <string name="verify_email">Verify</string>
    <string name="detail">Sign in or make an account to manage your shopping list.\nHope you enjoy and have a happy shopping day. :)</string>


    <string name="emailpassword_title_text">Sign in or make account</string>
    <string name="loading">Loading....</string>
    <string name="auth_failed">Auth_failed.:(</string>
    <string name="emailpassword_status_fmt">Test</string>
    <string name="firebase_status_fmt">sdf</string>


</resources>
