<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.projects.shoppinglist.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/clearCartMenu"
        android:orderInCategory="1"
        android:title="@string/ClearBTN"
        android:icon="@drawable/clearicon"
        app:showAsAction="always"/>

    <item
        android:id="@+id/aboutmenupkt"
        android:orderInCategory="4"
        android:title="@string/aboutmenupkt"
        android:icon="@drawable/abouticon"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/takePhoto"
        android:orderInCategory="2"
        android:title="@string/camera"
        android:icon="@drawable/camera"
        app:showAsAction="ifRoom"
        >
    </item>

    <item android:id="@+id/shareShoppingList"
        android:orderInCategory="3"
        android:title="@string/shareshoppinglist"
        app:showAsAction="never"
        >
    </item>

    <item android:id="@+id/signout"
        android:orderInCategory="3"
        android:title="@string/sign_out"
        app:showAsAction="never"
        >
    </item>
</menu>
